# kakuro

./: .gitignore  CMakeLists.txt  Makefile  cpp11_compat.h  main.cpp  run.sh
grilles/: README.md
parser/: Makefile
src/: Case.cpp  Case.h  Couleur.h  forward.cpp  forward.h  kakuro_parser.cpp  kakuro_parser.h  make_unique.h  ostream.cpp  ostream.h  parser.cpp  parser.h  typedefs.h
src/csp/: algorithm.cpp  algorithm.h  compare_variables.cpp  compare_variables.h  csp_constraint.cpp  csp_constraint.h  csp_variable.cpp  csp_variable.h  heuristic.cpp  heuristic.h  history.cpp  history.h  solution.cpp  solution.h
src/csp/algo/: algo_fc_2.cpp  algo_fc_2.h  algo_forward_checking.cpp  algo_forward_checking.h  algorithm_backtrack.cpp  algorithm_backtrack.h  algorithm_forward_checking.cpp  algorithm_forward_checking.h  algorithm_forward_checking_2.cpp  algorithm_forward_checking_2.h  record.cpp  record.h  record_type.h
src/csp/constraint/: csp_constraint_difference.cpp  csp_constraint_difference.h  csp_constraint_solution.cpp  csp_constraint_solution.h  csp_constraint_sum.cpp  csp_constraint_sum.h
